Added Ads and Categories

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,7 +49,6 @@ android {
 }
 
 dependencies {
-
     implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
     implementation 'androidx.activity:activity-compose:1.6.1'
@@ -64,6 +63,7 @@ dependencies {
     debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_version"
     implementation "androidx.compose.runtime:runtime-livedata:$compose_version"
     implementation "dev.chrisbanes.snapper:snapper:0.3.0"
+    implementation 'com.google.android.gms:play-services-ads:21.5.0'
 
     //Hilt Dagger
     implementation 'com.google.dagger:hilt-android:2.45'
