Added Lazy Scroll to load wallpapers and added pinch to zoom

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -104,6 +104,8 @@ dependencies {
 
     // To use Kotlin annotation processing tool (kapt)
     kapt "androidx.room:room-compiler:2.5.0"
+
+    implementation "com.mxalbert.zoomable:zoomable:1.5.1"
 }
 
 kapt {
